# portfolio

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml  requirements.txt  test_tools.py
backend/agents/: __init__.py  deep_dive_system_prompt.md  model.py  nodes.py  qa_system_prompt.md  system_prompt.md  tools.py
backend/schemas/: __init__.py  graph.py  tool.py
backend/streaming/: ndjson.py
